Spain post completed
needs proofreading before publishing

--- a/source/_posts/2014-04-08-spain.markdown
+++ b/source/_posts/2014-04-08-spain.markdown
@@ -184,52 +184,107 @@ often facing right towards me, 2ft away, which did make me a bit uncomfortable.
 
 One of the couch surfers was a nice girl from Chile, Natalia, who insists that I
 get in touch with her where I go to Chile or Uruguay, so she can put me in touch
-with friends to stay with there. Win!
-
-went to casa batillo, another home designed by Gaudí. more lovely curves,
-spirals and gradients of colours. the building looks like a dragon along the
-rooftop from the outside. beautiful furniture, would have been an amazing place
-to live.
+with her friends to maybe stay with there. Win!
 
 <a href="http://www.flickr.com/photos/lucasthenomad/13809497833/in/set-72157643866689355" title="Casa Batlló Facade by Lucas the nomad, on Flickr"><img src="http://farm4.staticflickr.com/3806/13809497833_e3fbede624_c.jpg" width="601" height="800" alt="Casa Batlló Facade"></a>
 
+Next up went and had a look at Casa Batlló, another home designed by Gaudí.
+Some parts of the place have a bit of a dragon theme to it, with lots of scales
+and bone like features on the façade and several more within.
+
 <a href="http://www.flickr.com/photos/lucasthenomad/13809039093/in/set-72157643866689355" title="Whirlpool ceiling by Lucas the nomad, on Flickr"><img src="http://farm8.staticflickr.com/7357/13809039093_b7955d4fc3_c.jpg" width="800" height="601" alt="Whirlpool ceiling"></a>
+
+This room had a very unique ceiling that spiralled around to look like a
+whirlpool vortex, with curved walls, curved doors... curved everything.
 
 <a href="http://www.flickr.com/photos/lucasthenomad/13809204735/in/set-72157643866689355" title="Casa Batlló by Lucas the nomad, on Flickr"><img src="http://farm3.staticflickr.com/2832/13809204735_0f45c216f5_c.jpg" width="601" height="800" alt="Casa Batlló"></a>
 
+The internal stairwell is tiled with blue tiles, but using darker tiles at the
+top, slowly fading to lighter blue tiles at the bottom. This was done to
+compensate for the colours being washed out by the bright light of the skylight
+when looking up, so it would appear a uniform blue, and it worked pretty well at
+doing so.
+
 <a href="http://www.flickr.com/photos/lucasthenomad/13809366973/in/set-72157643866689355" title="Casa Batlló rooftop by Lucas the nomad, on Flickr"><img src="http://farm8.staticflickr.com/7117/13809366973_f627feefd8_c.jpg" width="800" height="601" alt="Casa Batlló rooftop"></a>
+
+Up on the rooftop there were more zany chimneys, decorated with the broken tile
+style. I don't know why every chimneys needs it's own separate bit at the very
+top, but it makes it look interesting at least.
 
 <a href="http://www.flickr.com/photos/lucasthenomad/13809385475/in/set-72157643866689355" title="Dragon scale tiles by Lucas the nomad, on Flickr"><img src="http://farm8.staticflickr.com/7401/13809385475_22543ea05a_c.jpg" width="601" height="800" alt="Dragon scale tiles"></a>
 
-went back to sagrada la familia, much shorter lines this day. has been made a
-basiica by the pope in 2010. sadly lots of scaffolding covering my favourite
-facade. ETA is 2030 so I may actually see it finished in my lifetime. realised
-from a model they have of the completed design, that the 5-6 tallest towers
-arent not built yet, so the "jesus" tower is going to be 2x as tall when it's
-done. compltetely epic.
+The roof tiles used on the very top of the front really look like scales, with
+the apex looking kind of like a colourful spine.
 
-<a href="http://www.flickr.com/photos/lucasthenomad/13809927463/in/set-72157643866689355" title="Spiral! by Lucas the nomad, on Flickr"><img src="http://farm8.staticflickr.com/7249/13809927463_026c86c61a_c.jpg" width="800" height="601" alt="Spiral!"></a>
+Yet another building that would have been so cool to actually live in.
 
-<a href="http://www.flickr.com/photos/lucasthenomad/13810099654/in/set-72157643866689355" title="Inside a tower through the doorway arch by Lucas the nomad, on Flickr"><img src="http://farm3.staticflickr.com/2895/13810099654_fd5569be9d_c.jpg" width="601" height="800" alt="Inside a tower through the doorway arch"></a>
+<a href="http://www.flickr.com/photos/lucasthenomad/13810183203/in/set-72157643866689355" title="Epic lighting by Lucas the nomad, on Flickr"><img src="http://farm8.staticflickr.com/7222/13810183203_d87235eb86_c.jpg" width="601" height="800" alt="Epic lighting inside La Sagrada Familia"></a>
 
-<a href="http://www.flickr.com/photos/lucasthenomad/13810295075/in/set-72157643866689355" title="Model of the completed Sagrada Familia by Lucas the nomad, on Flickr"><img src="http://farm8.staticflickr.com/7096/13810295075_f30b748621_c.jpg" width="601" height="800" alt="Model of the completed Sagrada Familia"></a>
-
-<a href="http://www.flickr.com/photos/lucasthenomad/13810328804/in/set-72157643866689355" title="Rainbow pillars by Lucas the nomad, on Flickr"><img src="http://farm3.staticflickr.com/2919/13810328804_7ac1795f11_c.jpg" width="601" height="800" alt="Rainbow pillars"></a>
-
-<a href="http://www.flickr.com/photos/lucasthenomad/13810315284/in/set-72157643866689355" title="Stunning lighting in the afternoon by Lucas the nomad, on Flickr"><img src="http://farm8.staticflickr.com/7340/13810315284_70ee143cc7_c.jpg" width="601" height="800" alt="Stunning lighting in the afternoon"></a>
+I went back to La Sagrada Familia and the second time the lines were much more
+reasonable and I got in in about 20 minutes. This was one of my favourite
+buildings the last time I came to Spain and it still is today.
 
 <a href="http://www.flickr.com/photos/lucasthenomad/13810039463/in/set-72157643866689355" title="The passion facade by Lucas the nomad, on Flickr"><img src="http://farm4.staticflickr.com/3750/13810039463_727a96e8f0_c.jpg" width="601" height="800" alt="The passion facade"></a>
 
-<a href="http://www.flickr.com/photos/lucasthenomad/13810183203/in/set-72157643866689355" title="Epic lighting by Lucas the nomad, on Flickr"><img src="http://farm8.staticflickr.com/7222/13810183203_d87235eb86_c.jpg" width="601" height="800" alt="Epic lighting"></a>
+The building has been under construction for well over 100 years now, with some
+information in the museum underneath estimating it will be completed in 2030 so
+I may even live to see it finished. My favourite side of the building last time
+was "The Passion" façade, which this time unfortunately was partially covered in
+scaffolding.
 
-love all the clean completixy of all the shapes involved, all coming back to
-simple math concepts. interesting museum underneath that I don't recall from
-last time.
+<a href="http://www.flickr.com/photos/lucasthenomad/13810295075/in/set-72157643866689355" title="Model of the completed Sagrada Familia by Lucas the nomad, on Flickr"><img src="http://farm8.staticflickr.com/7096/13810295075_f30b748621_c.jpg" width="601" height="800" alt="Model of the completed Sagrada Familia"></a>
 
-Started to wonder what my photos from last time I visited looked like, and if I
-had enough foresight to take photos of both the completed and under construction
-areas to compare. this time I took lots of photos which while just construction
-now, will be great to look back on in 20 years, seeing this massive structure
-still heavily in progress
+I saw this model and found out that even though the building is already huge,
+it's still missing the 5 or 6 tallest towers. The central "Jesus" tower alone is
+going to be nearly double the height of any of the existing ones. Epic!
+
+<a href="http://www.flickr.com/photos/lucasthenomad/13810099654/in/set-72157643866689355" title="Inside a tower through the doorway arch by Lucas the nomad, on Flickr"><img src="http://farm3.staticflickr.com/2895/13810099654_fd5569be9d_c.jpg" width="601" height="800" alt="Inside a tower through the doorway arch"></a>
+
+I got to go up one of the Nativity towers, which thankfully they have an
+elevator to take you up. You get a good view of the city, some interesting
+angles on the construction that's taking place and some eery long drops to look
+down the middle of spiral staircases.
+
+<a href="http://www.flickr.com/photos/lucasthenomad/13809927463/in/set-72157643866689355" title="Spiral! by Lucas the nomad, on Flickr"><img src="http://farm8.staticflickr.com/7249/13809927463_026c86c61a_c.jpg" width="800" height="601" alt="Spiral!"></a>
+
+It was a lot of steps down from the tower, in a rather dizzying spiral, but it's
+better walking down steps than up them.
+
+<a href="http://www.flickr.com/photos/lucasthenomad/13810315284/in/set-72157643866689355" title="Stunning lighting in the afternoon by Lucas the nomad, on Flickr"><img src="http://farm8.staticflickr.com/7340/13810315284_70ee143cc7_c.jpg" width="601" height="800" alt="Stunning lighting in the afternoon"></a>
+
+The time of day, and the intensity of the sun with clear skies, mean that the
+stained glass was casting lots of really pretty light inside the building. There
+are still large area where the windows are plain glass, so I can only imagine
+the rainbow this place will be when all the windows are done.
+
+I just love all the clean complexity of all the shapes involved, with so much of
+it coming from fairly basic math and geometry concepts. The columns for example
+are [double
+twisted](http://www.sagradafamilia.cat/sf-eng/docs_instit/geometria1.php),
+meaning (I think) that they have twice as many "sides" at their tops than they
+do at the bottom, but there's no sudden point where this shape change takes
+place. There was a video of the machine they used to produce them and it was
+mesmerizing to watch. [The whole geometry
+section](http://www.sagradafamilia.cat/sf-eng/docs_instit/geometria1.php) of the
+official site is worth checking out if you like that kind of stuff.
+
+<a href="http://www.flickr.com/photos/lucasthenomad/13810328804/in/set-72157643866689355" title="Rainbow pillars by Lucas the nomad, on Flickr"><img src="http://farm3.staticflickr.com/2919/13810328804_7ac1795f11_c.jpg" width="601" height="800" alt="Rainbow pillars"></a>
+
+That was in the very interesting museum underneath that I don't recall from
+last time. There was lots of information about the design, including a replica
+of the hanging model of the building, made from string and sandbag weights,
+which was used to work out the correct angles for everything to bear the weight.
+
+I've started to wonder what my photos from last time I visited looked like, and
+if I had enough foresight to take photos of both the completed and under
+construction parts of the building to compare. This time I made sure I took some
+photos of the construction, which while not particularly interesting now, will
+be great to look back on in 20 years and seeing this massive structure still
+heavily in progress.
 
 <a href="http://www.flickr.com/photos/lucasthenomad/13810745704/in/set-72157643866689355" title="Crazy rainbow building by Lucas the nomad, on Flickr"><img src="http://farm4.staticflickr.com/3706/13810745704_f46a278fb5_c.jpg" width="601" height="800" alt="Crazy rainbow building"></a>
+
+The last thing of note I checked out was this strange egg shaped building called
+Torre Agbar. At night the building is a slowly changing cloud of colours. It's
+quite impressive to see a 30+ story building semi-randomly changing colours in
+the darkness.
