--- a/source/_posts/2014-04-08-spain.markdown
+++ b/source/_posts/2014-04-08-spain.markdown
@@ -8,47 +8,47 @@ published: false
 priority: 0.5
 ---
 
-Even in winter the weather is Barcelona is lovely. As soon as I landed and got my
-bag through customs I put my heavy winter jacket away and was quite happy in
+Even in winter the weather is Barcelona is lovely. As soon as I landed and got
+through customs, I put my heavy winter jacket away and was quite comfortable in
 just a T-shirt. It seemed like the warm weather would be great for helping me
-kick a cold that had been hanging around for my last few weeks in Berlin,
-that had left me sniffing and congested for far too long.
+kick a cold that had been hanging around for my last few weeks in Berlin, which
+had left me sniffing and congested for far too long.
 
 <a href="http://www.flickr.com/photos/lucasthenomad/13809549773/in/set-72157643866689355" title="Sagrada Familia by Lucas the nomad, on Flickr"><img src="http://farm4.staticflickr.com/3669/13809549773_b5c9a73fbe_c.jpg" width="800" height="601" alt="La Sagrada Familia"></a>
 
 <!-- more -->
 
-I spent the first few days doing not much, walking around the city near La
+I spent the first few days not doing very much, walking around the city near La
 Rambla and enjoying the warmth, and trying to rest up.
 
 Once I was feeling a bit better I took a free walking tour of Barcelona that
-went around a number of sites in the heart of Barcelona and give background and
-history of the city. The tour really made me realise how little I know about
-even recent Spanish history. I did not know that they had a dictatorship right
-up until 1975, which was apparently allowed by the rest of Europe because the
-dictator hadn't supported Hitler in WWII.
+went around a number of sites in the heart of Barcelona and gave some background
+and history about the city. The tour really made me realise how little I know
+about Spanish history, even the quite recent parts. I did not know that they had
+had a dictatorship right up until the mid-70s, which was apparently allowed by
+the rest of Europe because their dictator hadn't supported Hitler in WWII.
 
 <a href="http://www.flickr.com/photos/lucasthenomad/13807882714/in/set-72157643866689355" title="First glimpse of Caga Tio, the shitting log by Lucas the nomad, on Flickr"><img src="http://farm3.staticflickr.com/2840/13807882714_d5216a705b_c.jpg" width="800" height="601" alt="First glimpse of Caga Tio"></a>
 
-I also learnt about some rather unique Catalan Christmas traditions. The
-first being Caga Tio (Literal translation: Uncle Shit), a happy looking log with
-a face and a blanket. Each day leading up to Christmas the kids beat Caga Tio
-with sticks "to help with digestion". Then on Christmas day, if the kids have
-beaten him enough to help him with his digestion problems, they peer under his
+I also learnt about some rather unique Catalan Christmas traditions. The first
+being Caga Tio (Literal translation: Uncle Shit), a log with a smiling face and
+a blanket. Each day leading up to Christmas the kids beat Caga Tio with sticks
+"to help with digestion". Then on Christmas day, if the kids have beaten him
+enough to help him with his digestion problems, they peer under Caga Tio's
 blanket and find that he's pooped out a load of candy. An important life lesson
 to teach your kids!
 
 <a href="http://www.flickr.com/photos/lucasthenomad/13810536113/in/set-72157643866689355" title="So many caganers by Lucas the nomad, on Flickr"><img src="http://farm8.staticflickr.com/7126/13810536113_62c182214f_c.jpg" width="600" height="800" alt="So many caganers"></a>
 
-The other strange Catalan Christmas tradition is the caganer. The caganer is a
+Another strange Catalan Christmas tradition is the caganer. The caganer is a
 little man, squatted over with his arse hanging out of his pants, and on the
 ground behind him is a freshly made turd. He's apparently hidden somewhere in
-every good Catalan persons nativity scene and the kids love to search for him.
-There was stall after stall selling these caganers, which you can get with in
-the likeness of all kinds of celebrities, the most distasteful being Nelson
-Mandela the same week he died. The guide said the caganer was something to do
-with representing giving back to the earth, but it just seems like they're
-obsessed with poop to me.
+every good Catalan person's nativity scene, and the kids love to search for him.
+There was stall after stall selling these caganers, which you can get in the
+likeness of all kinds of celebrities, the most distasteful being Nelson Mandela
+the very same week he died. The guide said the caganer had something to do with
+the idea of giving back to the earth, but it just seems like they're obsessed
+with poop to me.
 
 <a href="http://www.flickr.com/photos/lucasthenomad/13807913783/in/set-72157643866689355" title="Nathalie, Ibrahim and me by Lucas the nomad, on Flickr"><img src="http://farm8.staticflickr.com/7309/13807913783_34a18f23dc_c.jpg" width="800" height="600" alt="Nathalie, Ibrahim and me"></a>
 
@@ -60,146 +60,152 @@ had told me about.
 
 The place did not disappoint, everything we tried was delicious from the Spanish
 ham and croquettes to the not-so-traditional perfectly cooked little steak
-bites, with delightful sangria to wash it down. I think my stand-out favourite
-was the sandwiches with [sobrasada](/images/sobrasada_de_bellota.jpg)
-(spreadable chorizo) and melted cheese. Spreadable meat seems like it should be
-wrong, but it tasted fantastic. I'm told that when
-[sturicho](/images/sturicho.jpg) was visiting he loved the stuff too; Ibby said
-he probably would have brushed his teeth with the stuff if he could have :P
+bites, with delightful sangria to wash it all down. I think my stand-out
+favourite was the little sandwiches with
+[sobrasada](/images/sobrasada_de_bellota.jpg) (basically spreadable chorizo) and
+melted cheese. Spreadable meat seems like it should be a bit wrong, but it tasted
+fantastic. I'm told that when [sturicho](/images/sturicho.jpg) was visiting he
+loved the stuff too; Ibby said he probably would have brushed his teeth with the
+stuff if he could have :P
 
-It was great to see those two again, they're both such kind hospitable people.
-It's always a pleasure spending time with them and I look forward to (hopefully)
-being able to converse in Spanish with them next time I see them.
+It was great to see Ibrahim and Nathalie again, they're both such kind
+hospitable people. It's always a pleasure spending time with them and I look
+forward to (hopefully) being able to converse in Spanish with them the next time
+we meet.
 
 <a href="http://www.flickr.com/photos/lucasthenomad/13807979643/in/set-72157643866689355" title="Palau Güell's beautiful entrance by Lucas the nomad, on Flickr"><img src="http://farm8.staticflickr.com/7071/13807979643_2e3c6aae51_c.jpg" width="800" height="601" alt="Palau Güell's beautiful entrance"></a>
 
 I managed to get along to see Güell palace, a building that was once the home of
-the Güell family, which was closed for renovations the last time I was in
-Barcelona.
+the Güell family, and which had been closed for renovations the last time I was
+in Barcelona.
 
 <a href="http://www.flickr.com/photos/lucasthenomad/13808355844/in/set-72157643866689355" title="Parabolic arches by Lucas the nomad, on Flickr"><img src="http://farm8.staticflickr.com/7302/13808355844_14212b2d48_c.jpg" width="601" height="800" alt="Parabolic arches"></a>
 
 It's another very beautiful building designed by Gaudí, designed with lots of
 smooth curves and vibrant colour. Gaudí used a lot of parabolic arches and other
-unique geometry, in his designs which give both strength as well as visually
-interesting features.
+unique geometry in his designs which give both strength as well as visually
+interesting features to the building.
 
 <a href="http://www.flickr.com/photos/lucasthenomad/13808807974/in/set-72157643866689355" title="Wrought iron work by Lucas the nomad, on Flickr"><img src="http://farm4.staticflickr.com/3801/13808807974_c1b85cb2b3_c.jpg" width="601" height="800" alt="Wrought iron work"></a>
 
 It featured a lot of quite complex wrought iron work which must have been made
-by very skilled craftsmen. It was all so perfect and regular, it's hard to
-believe it wasn't done by a machine.
+by very skilled craftsmen. It was all so neat and regular, it's hard to believe
+it wasn't done by a machine.
 
 <a href="http://www.flickr.com/photos/lucasthenomad/13808579334/in/set-72157643866689355" title="Palau Güell chimneys by Lucas the nomad, on Flickr"><img src="http://farm4.staticflickr.com/3819/13808579334_34846ded2c_c.jpg" width="800" height="601" alt="Palau Güell chimneys"></a>
 
 Up on the roof there were heaps of colourful chimneys, no two the same. Many
-were covered in broken bits of tile, a style heavily used by Gaudí in quite a
-few of his works, but there were a few that were just red bricks laid in
-interesting formations.
+were decorated with lots of tiny bits of broken tile, a style heavily used by
+Gaudí in a lot of his works, but there were also a few that were just red bricks
+built in interesting formations.
 
 <a href="http://www.flickr.com/photos/lucasthenomad/13808511193/in/set-72157643866689355" title="The bullring shopping center by Lucas the nomad, on Flickr"><img src="http://farm4.staticflickr.com/3830/13808511193_4e985a5e60_c.jpg" width="800" height="601" alt="The bullring shopping center"></a>
 
-I went to Plaza de España to go up to the roof of Arenas de Barcelona, an old
-bullring that has since been converted into a shopping centre. There's a lift
-out the front that you have to pay a few Euro to get up to the viewing platform
-on the roof, or you can go into the shopping centre and use the escalators and
-get up there for free.
+I made a visit  to Plaza de España to go up to the roof of Arenas de Barcelona,
+an old bullring that has since been converted into a shopping centre. There's a
+lift out the front that you have to pay a few Euro to get up to the viewing
+platform on the roof, or you can go inside the shopping centre and use the
+escalators and get up there for free.
 
 <a href="http://www.flickr.com/photos/lucasthenomad/13808520673/in/set-72157643866689355" title="Looking out from the rooftop, straight at a hotel pool by Lucas the nomad, on Flickr"><img src="http://farm4.staticflickr.com/3684/13808520673_8e1f63c67c_c.jpg" width="800" height="601" alt="Looking out from the rooftop, straight at a hotel pool"></a>
 
-From the roof you get a nice view of the city is most directions. You also get a
-view looking straight at this hotel's swimming pool. I imagine it was built
+From the roof you get a nice view of the city in most directions. You also get a
+view looking straight at a hotel's swimming pool. I imagine it was built long
 before the viewing platform was there, but I can't imaging people rushing to use
 the pool now with hoards of people at Arenas looking straight out at you.
 
 <a href="http://www.flickr.com/photos/lucasthenomad/13808555395/in/set-72157643866689355" title="Montjuïc Castle by Lucas the nomad, on Flickr"><img src="http://farm6.staticflickr.com/5504/13808555395_c2fe7003c2_c.jpg" width="800" height="601" alt="Montjuïc Castle"></a>
 
-From there I got a bus to Montjuïc Castle and have a look around. I remember
-visiting here the last time I was in town, and the building seemed mostly how I
-remembered it, although I'm pretty sure it wasn't free last time and now it is
-:D
+From there I got a bus to Montjuïc Castle and explore. I remember visiting here
+the last time I was in town, and the building seemed mostly how I remembered it,
+although I'm pretty sure it wasn't free last time and now it is :D
 
 <a href="http://www.flickr.com/photos/lucasthenomad/13808612155/in/set-72157643866689355" title="Barcelona by Lucas the nomad, on Flickr"><img src="http://farm8.staticflickr.com/7004/13808612155_755dbcd073_c.jpg" width="800" height="500" alt="Barcelona"></a>
 
 It's up on top of a hill, so it's another great place to get a view of Barcelona.
 
-In the evening I went to see a light/water/sound show dubbed "The Magic
+In the evening I went to see a light/water/sound show known as "The Magic
 Fountain". When I arrived there was an absolutely massive crowd and the show
 seemed to be delayed. Nobody seemed to have much of an idea what was going on so
 I ducked off for a quick drink, then from where I was having my drink I saw a
-massive fireworks show going off from the direction of the fountain. It wouldn't
-have looked out of place on the TV amongst a wrap-up of the years NYE fireworks,
-it was pretty epic. I found out later that this was for a couples wedding...
+huge fireworks show going off from the direction of the fountain. It wouldn't
+have seemed out of place on the TV amongst a wrap-up of the years NYE fireworks,
+it was really epic. I found out later that this was just for some couples wedding...
 rich people!
 
 <a href="http://www.flickr.com/photos/lucasthenomad/13808981964/in/set-72157643866689355" title="Magic fountain by Lucas the nomad, on Flickr"><img src="http://farm3.staticflickr.com/2909/13808981964_21e85ea3b0_c.jpg" width="800" height="600" alt="Magic fountain"></a>
 
 Anyway, I went back to the fountain and found that now that the fireworks were
-over they were back to a more normal schedule for the fountain, so I took a seat
-and watched the nicely synchronised display. Some of the water effects were
-really foamy and fluffy, and the lights coming through made it look like some
+over they were back to a more normal schedule for the fountain. I took a seat
+and watched the wonderfully synchronised display. Some of the water effects were
+really foamy, and light and fluffy looking, and the lights coming through made it look like some
 sort of magic smoke. Really cool to see.
 
 <a href="http://www.flickr.com/photos/lucasthenomad/13810906184/in/set-72157643866689355" title="Park Güell Logo by Lucas the nomad, on Flickr"><img src="http://farm6.staticflickr.com/5321/13810906184_e7aab18a47_c.jpg" width="800" height="504" alt="Park Güell Logo"></a>
 
-I tried to go to Sagrada Familia, but there was yet another public holiday so
-the queue went right around the block. I wasn't really keen on waiting for
-hours to get in and have the place be cramped full of people so I went to Park
-Güell instead.
+On a day that happened to be another public holiday I tried to go to Sagrada
+Familia, but the queue went right around the block. I wasn't really keen on
+waiting for hours to get in and have the place be cramped full of people so I
+went to Park Güell instead.
 
 <a href="http://www.flickr.com/photos/lucasthenomad/13809086694/in/set-72157643866689355" title="Park Güell main stairway by Lucas the nomad, on Flickr"><img src="http://farm8.staticflickr.com/7090/13809086694_ec3de27f4a_c.jpg" width="800" height="601" alt="Park Güell main stairway"></a>
 
 Sadly the public holiday meant even though I didn't have to wait long to get in,
-the park was packed with people like a circus and not anything like the
-peaceful, pretty park I remembered.
+the park was packed to the rafters with people and felt like a circus. Nothing
+like the peaceful, attractive park I had such nice memories of.
 
 <a href="http://www.flickr.com/photos/lucasthenomad/13808713993/in/set-72157643866689355" title="Spiral pillars by Lucas the nomad, on Flickr"><img src="http://farm8.staticflickr.com/7230/13808713993_668bf0eec4_c.jpg" width="601" height="800" alt="Spiral pillars"></a>
 
 It was really challenging to get a nice photo of any of the signature parts of
 the park without a dozen people also in the shot posing for their next Facebook
-avatar. I did manage to get a few shots that mislead you into thinking it wasn't
-like that at all, but that's only because I'm both stubborn and patient and will
-wait around for 10 minutes waiting for a gap.
+avatar. I did manage to get a few shots that might mislead you into thinking it
+wasn't like that at all, but that's only because I'm both stubborn and patient
+and will wait around for 10+ minutes waiting for that tiny gap.
 
 <a href="http://www.flickr.com/photos/lucasthenomad/13809144934/in/set-72157643866689355" title="Park Güell dragon by Lucas the nomad, on Flickr"><img src="http://farm3.staticflickr.com/2866/13809144934_9a03d34057_c.jpg" width="800" height="601" alt="Park Güell dragon"></a>
 
-The most well known part of the park, the dragon, was a nightmare. There was
-an endless line of people waiting to rush in for their photo, me included.
+The most well known part of the park, the dragon, was a nightmare. There was an
+endless line of people waiting to rush in for their photo, myself included. I
+did manage to get one nice shot of it by itself, but the photos with me in them
+all had photobombers in the background.
 
 <a href="http://www.flickr.com/photos/lucasthenomad/13809190964/in/set-72157643866689355" title="Park Güell by Lucas the nomad, on Flickr"><img src="http://farm8.staticflickr.com/7395/13809190964_2a5f3c5741_c.jpg" width="601" height="800" alt="Park Güell"></a>
 
-I ended up leaving feeling pretty sick (the cold was still hanging around),
-frustrated and generally tired of crowds. I probably should have just rested on
-the public holidays and gone the next day.
+I ended up leaving feeling a bit sick (the cold was still hanging around),
+frustrated and generally fed up with large crowds. I probably should have just
+rested on the public holidays and gone the next day.
 
-I saw that a couch surfing meeting up happening at a little flamenco concert at
-a bar on the other side of town, so I headed over to check it out. I met a bunch
-of lovely South Americans there, it was nice to hear some Spanish that I knew
-was actually Spanish, all the Catalan that's spoken in Barcelona is really
-off-putting for a Spanish learner.
+I noticed that there was a couch surfing meet up happening at a little flamenco
+concert at a bar on the other side of town, so I headed over to check it out. I
+met a bunch of lovely South Americans there who all lived in Barcelona now. It
+was nice to hear some Spanish that I knew was actually Spanish for a change, all
+the Catalan that's spoken in Barcelona is really off-putting for a Spanish
+learner.
 
-The flamenco show had beautifully played guitar and singing and some _very_
+The flamenco show had beautifully played guitar and singing, and some _very_
 passionate dancing. I had a "front row" seat, which meant the woman dancing was
-often facing right towards me, 2ft away, which did make me a bit uncomfortable.
+often facing right towards me, barely 2ft away, which did make me feel quite
+uncomfortable and self-conscious. My brain is weird sometimes.
 
 One of the couch surfers was a nice girl from Chile, Natalia, who insists that I
 get in touch with her where I go to Chile or Uruguay, so she can put me in touch
-with her friends to maybe stay with there. Win!
+with her friends there to maybe stay with them. Win!
 
-<a href="http://www.flickr.com/photos/lucasthenomad/13809497833/in/set-72157643866689355" title="Casa Batlló Facade by Lucas the nomad, on Flickr"><img src="http://farm4.staticflickr.com/3806/13809497833_e3fbede624_c.jpg" width="601" height="800" alt="Casa Batlló Facade"></a>
+<a href="http://www.flickr.com/photos/lucasthenomad/13809497833/in/set-72157643866689355" title="Casa Batlló Façade by Lucas the nomad, on Flickr"><img src="http://farm4.staticflickr.com/3806/13809497833_e3fbede624_c.jpg" width="601" height="800" alt="Casa Batlló Façade"></a>
 
 Next up went and had a look at Casa Batlló, another home designed by Gaudí.
-Some parts of the place have a bit of a dragon theme to it, with lots of scales
-and bone like features on the façade and several more within.
+A lot of parts of the place have a bit of a dragon theme to them, with lots of scales
+and bone-like features on the façade and several more within.
 
 <a href="http://www.flickr.com/photos/lucasthenomad/13809039093/in/set-72157643866689355" title="Whirlpool ceiling by Lucas the nomad, on Flickr"><img src="http://farm8.staticflickr.com/7357/13809039093_b7955d4fc3_c.jpg" width="800" height="601" alt="Whirlpool ceiling"></a>
 
 This room had a very unique ceiling that spiralled around to look like a
-whirlpool vortex, with curved walls, curved doors... curved everything.
+whirlpool vortex, with curved walls, curved doors... pretty much curved
+everything.
 
 <a href="http://www.flickr.com/photos/lucasthenomad/13809204735/in/set-72157643866689355" title="Casa Batlló by Lucas the nomad, on Flickr"><img src="http://farm3.staticflickr.com/2832/13809204735_0f45c216f5_c.jpg" width="601" height="800" alt="Casa Batlló"></a>
 
-The internal stairwell is tiled with blue tiles, but using darker tiles at the
+The internal stairwell is tiled with blue tiles, but with darker tiles at the
 top, slowly fading to lighter blue tiles at the bottom. This was done to
 compensate for the colours being washed out by the bright light of the skylight
 when looking up, so it would appear a uniform blue, and it worked pretty well at
@@ -208,61 +214,64 @@ doing so.
 <a href="http://www.flickr.com/photos/lucasthenomad/13809366973/in/set-72157643866689355" title="Casa Batlló rooftop by Lucas the nomad, on Flickr"><img src="http://farm8.staticflickr.com/7117/13809366973_f627feefd8_c.jpg" width="800" height="601" alt="Casa Batlló rooftop"></a>
 
 Up on the rooftop there were more zany chimneys, decorated with the broken tile
-style. I don't know why every chimneys needs it's own separate bit at the very
-top, but it makes it look interesting at least.
+style. I don't know why every fireplace needs it's own separate chimney at the
+very top, but it makes them look interesting at least.
 
 <a href="http://www.flickr.com/photos/lucasthenomad/13809385475/in/set-72157643866689355" title="Dragon scale tiles by Lucas the nomad, on Flickr"><img src="http://farm8.staticflickr.com/7401/13809385475_22543ea05a_c.jpg" width="601" height="800" alt="Dragon scale tiles"></a>
 
-The roof tiles used on the very top of the front really look like scales, with
-the apex looking kind of like a colourful spine.
-
-Yet another building that would have been so cool to actually live in.
+The roof tiles used on the very top of the façade really look like scales, with
+the ridge of the roof looking kind of like a colourful spine. Yet another
+building that would have been so cool to actually live in.
 
 <a href="http://www.flickr.com/photos/lucasthenomad/13810183203/in/set-72157643866689355" title="Epic lighting by Lucas the nomad, on Flickr"><img src="http://farm8.staticflickr.com/7222/13810183203_d87235eb86_c.jpg" width="601" height="800" alt="Epic lighting inside La Sagrada Familia"></a>
 
-I went back to La Sagrada Familia and the second time the lines were much more
+I returned to La Sagrada Familia and this time the lines were far more
 reasonable and I got in in about 20 minutes. This was one of my favourite
-buildings the last time I came to Spain and it still is today.
+buildings the last time I came to Spain and it still is today. It's probably my
+single favourite building anywhere in the world. A big call, but it's one heck
+of an impressive structure.
 
-<a href="http://www.flickr.com/photos/lucasthenomad/13810039463/in/set-72157643866689355" title="The passion facade by Lucas the nomad, on Flickr"><img src="http://farm4.staticflickr.com/3750/13810039463_727a96e8f0_c.jpg" width="601" height="800" alt="The passion facade"></a>
+<a href="http://www.flickr.com/photos/lucasthenomad/13810039463/in/set-72157643866689355" title="The passion façade by Lucas the nomad, on Flickr"><img src="http://farm4.staticflickr.com/3750/13810039463_727a96e8f0_c.jpg" width="601" height="800" alt="The passion façade"></a>
 
-The building has been under construction for well over 100 years now, with some
-information in the museum underneath estimating it will be completed in 2030 so
-I may even live to see it finished. My favourite side of the building last time
-was "The Passion" façade, which this time unfortunately was partially covered in
-scaffolding.
+The building has been under construction for around 130 years now, with
+information in the museum estimating it will be completed in 2030, so I may even
+live to see it finished. My favourite side of the building last time was "The
+Passion" façade, which this time unfortunately was partially covered in
+scaffolding. The sculpture style is very angular and not really attempting to
+look really human, which I feel makes it far more interesting than the generic
+style that seems to dominate sculpture.
 
 <a href="http://www.flickr.com/photos/lucasthenomad/13810295075/in/set-72157643866689355" title="Model of the completed Sagrada Familia by Lucas the nomad, on Flickr"><img src="http://farm8.staticflickr.com/7096/13810295075_f30b748621_c.jpg" width="601" height="800" alt="Model of the completed Sagrada Familia"></a>
 
-I saw this model and found out that even though the building is already huge,
-it's still missing the 5 or 6 tallest towers. The central "Jesus" tower alone is
+I found this model and learnt that even though the building is already huge, the
+5 or 6 tallest towers are not build yet. The central "Jesus" tower alone is
 going to be nearly double the height of any of the existing ones. Epic!
 
 <a href="http://www.flickr.com/photos/lucasthenomad/13810099654/in/set-72157643866689355" title="Inside a tower through the doorway arch by Lucas the nomad, on Flickr"><img src="http://farm3.staticflickr.com/2895/13810099654_fd5569be9d_c.jpg" width="601" height="800" alt="Inside a tower through the doorway arch"></a>
 
-I got to go up one of the Nativity towers, which thankfully they have an
+I got to go up inside one of the Nativity towers, which thankfully they have an
 elevator to take you up. You get a good view of the city, some interesting
-angles on the construction that's taking place and some eery long drops to look
+angles on the construction that's taking place, and some eery long drops to look
 down the middle of spiral staircases.
 
 <a href="http://www.flickr.com/photos/lucasthenomad/13809927463/in/set-72157643866689355" title="Spiral! by Lucas the nomad, on Flickr"><img src="http://farm8.staticflickr.com/7249/13809927463_026c86c61a_c.jpg" width="800" height="601" alt="Spiral!"></a>
 
-It was a lot of steps down from the tower, in a rather dizzying spiral, but it's
-better walking down steps than up them.
+It was a lot of steps down from the tower, in a rather tight and dizzying
+spiral, but it's way better walking down steps than up them.
 
 <a href="http://www.flickr.com/photos/lucasthenomad/13810315284/in/set-72157643866689355" title="Stunning lighting in the afternoon by Lucas the nomad, on Flickr"><img src="http://farm8.staticflickr.com/7340/13810315284_70ee143cc7_c.jpg" width="601" height="800" alt="Stunning lighting in the afternoon"></a>
 
-The time of day, and the intensity of the sun with clear skies, mean that the
-stained glass was casting lots of really pretty light inside the building. There
-are still large area where the windows are plain glass, so I can only imagine
-the rainbow this place will be when all the windows are done.
+The time of day, and the intense brightness of the suns, meant that the stained
+glass was casting lots of wonderfully pretty light inside the building. There
+are still large area where the windows are just plain glass, so I can only
+imagine the rainbow this place will be when all the windows are done.
 
 I just love all the clean complexity of all the shapes involved, with so much of
-it coming from fairly basic math and geometry concepts. The columns for example
+it coming from fairly simple math and geometry concepts. The columns for example
 are [double
 twisted](http://www.sagradafamilia.cat/sf-eng/docs_instit/geometria1.php),
-meaning (I think) that they have twice as many "sides" at their tops than they
-do at the bottom, but there's no sudden point where this shape change takes
+meaning that they have twice as many "sides" at their tops than they
+do at the bottom, and there's no sudden point where this shape change takes
 place. There was a video of the machine they used to produce them and it was
 mesmerizing to watch. [The whole geometry
 section](http://www.sagradafamilia.cat/sf-eng/docs_instit/geometria1.php) of the
