--- a/source/_posts/2014-04-20-granada.markdown
+++ b/source/_posts/2014-04-20-granada.markdown
@@ -12,7 +12,9 @@ priority: 0.5
 From Barcelona I got the overnight train to Granada. It left quite late in the
 evening, and arrived in Granada at about 9 the next morning. I had some sleeping
 pills and slept as well as is possible on a train, but was still exhausted when
-we arrived.
+I arrived.
+
+<a href="http://www.flickr.com/photos/lucasthenomad/13916722755/in/set-72157644104270734" title="The courtyard at my hostel in Granada by Lucas the nomad, on Flickr"><img src="http://farm3.staticflickr.com/2900/13916722755_b4e79f4e47_c.jpg" width="601" height="800" alt="The courtyard at my hostel in Granada"></a>
 
 I headed to the hostel that I'd looked up online beforehand and checked that
 they had a bed for me. It was too early to check in but they let me lock up my
@@ -24,19 +26,31 @@ Over breakfast I got talking with a friendly girl named Emily from Adelaide, and
 decided to go on a free walking tour with her and her other Adeladian friend
 Connor.
 
+
 The tour was led by a nice guy named Borja, a student who'd been living in
 Granada for some time. 
 Rachel from Chicago and Jack from Hobart
 
 orientation of the old part of the city
 
+hammam 
+
+<a href="http://www.flickr.com/photos/lucasthenomad/13893631012/in/set-72157644104270734" title="Inside the Hamam by Lucas the nomad, on Flickr"><img src="http://farm4.staticflickr.com/3758/13893631012_de64238da4_c.jpg" width="601" height="800" alt="Inside the Hamam"></a>
+
 Interesting yo learn about the trouble unesco causes for people who can't afford
 to maintain their houses, huge fines and eventually having to give up their
 houses to unesco. Lots of abandoned properties.
 
+<a href="http://www.flickr.com/photos/lucasthenomad/13893651602/in/set-72157644104270734" title="A random courtyard our waking tour wandered into by Lucas the nomad, on Flickr"><img src="http://farm3.staticflickr.com/2933/13893651602_63856101f6_c.jpg" width="601" height="800" alt="A random courtyard our waking tour wandered into"></a>
+
 borja told he that he'd spent some time lviing in a cave house at one point.
 also that granada got a bit lonely because nobody stays for long, students come,
 study and leave so you only know people for a few years.
+
+<a href="http://www.flickr.com/photos/lucasthenomad/13917231884/in/set-72157644104270734" title="This are apparently the original cave homes, they dont look very cave like anymore by Lucas the nomad, on Flickr"><img src="http://farm4.staticflickr.com/3680/13917231884_f6cf9e3973_c.jpg" width="800" height="601" alt="This are apparently the original cave homes, they dont look very cave like anymore"></a>
+
+
+<a href="http://www.flickr.com/photos/lucasthenomad/13917246354/in/set-72157644104270734" title="Blue and white ceramic Coke sign by Lucas the nomad, on Flickr"><img src="http://farm4.staticflickr.com/3715/13917246354_28b254f3fe_c.jpg" width="800" height="601" alt="Blue and white ceramic Coke sign"></a>
 
 after the tour ended Went and had tapas lunch with people from tour, 2€ for a
 beer and 3 tapas! orangised to meet up with everyone again the evening to see a
@@ -49,6 +63,8 @@ tiny! and jam packed. again every drink came with tapas, they'd ask you which
 drink you were up to because there was obviously a sequence that you got them
 served in.
 
+<a href="http://www.flickr.com/photos/lucasthenomad/13916878053/in/set-72157644104270734" title="Live music in a tiny little bar by Lucas the nomad, on Flickr"><img src="http://farm8.staticflickr.com/7152/13916878053_e23947d397_c.jpg" width="600" height="800" alt="Live music in a tiny little bar"></a>
+
 the band was great, very imformal feel to things, very expressive singing.
 rachel even broke out into song at one point, and boy can that girl sing. if
 being a chef gets old, she's got potential to make a living from that voice.
@@ -57,12 +73,23 @@ being a chef gets old, she's got potential to make a living from that voice.
 Met up with Em and Connor at breakfast and decided to go up to the Alhambra
 together. Fell up two steps on the way and sprained my left ring finger :(
 
+<a href="http://www.flickr.com/photos/lucasthenomad/13916827755/in/set-72157644104270734" title="Connor & Emily at the path to the Alhambra by Lucas the nomad, on Flickr"><img src="http://farm4.staticflickr.com/3816/13916827755_4ca281df1f_c.jpg" width="800" height="601" alt="Connor & Emily at the path to the Alhambra"></a>
+
 heard stories about how you needed to book days in advance, but we all got lucky
 and Got allocated a entry to the palace pretty much right away, so we headed
 straight there
 
 incredibly intricate carvings, so huge and so detailed. very impressive. some
 parts still painted, would have been amazing to see with the full colour
+
+<a href="http://www.flickr.com/photos/lucasthenomad/13917389114/in/set-72157644104270734" title="Columns and carvings by Lucas the nomad, on Flickr"><img src="http://farm3.staticflickr.com/2928/13917389114_da6a381b04_c.jpg" width="800" height="601" alt="Columns and carvings"></a>
+
+
+<a href="http://www.flickr.com/photos/lucasthenomad/13893863532/in/set-72157644104270734" title="Leave no surface uncarved by Lucas the nomad, on Flickr"><img src="http://farm8.staticflickr.com/7028/13893863532_392ee084ec_c.jpg" width="800" height="601" alt="Leave no surface uncarved"></a>
+
+<a href="http://www.flickr.com/photos/lucasthenomad/13893897796/in/set-72157644104270734" title="Rich colours by Lucas the nomad, on Flickr"><img src="http://farm4.staticflickr.com/3749/13893897796_085e34aa23_c.jpg" width="800" height="601" alt="Rich colours"></a>
+
+<a href="http://www.flickr.com/photos/lucasthenomad/13916961855/in/set-72157644104270734" title="Beautiful patterns by Lucas the nomad, on Flickr"><img src="http://farm8.staticflickr.com/7353/13916961855_f16db6cb33_c.jpg" width="800" height="601" alt="Beautiful patterns"></a>
 
 interesting restoration technique where they embed the new material with UV
 reactive stuff, so it can appear “normal/fixed” to the naked eye but still be
@@ -74,9 +101,22 @@ the palace visit
 me and rachel went and explored another building, a big square building, that
 had a circular open courtyard in the middle and some museums
 
+<a href="http://www.flickr.com/photos/lucasthenomad/13893925392/in/set-72157644104270734" title="Round courtyard by Lucas the nomad, on Flickr"><img src="http://farm3.staticflickr.com/2928/13893925392_1a7b0067cf_c.jpg" width="800" height="601" alt="Round courtyard"></a>
+
 went and explored the barracks and towers, ran into em and connor again
 
+<a href="http://www.flickr.com/photos/lucasthenomad/13917480704/in/set-72157644104270734" title="Soldiers barracks by Lucas the nomad, on Flickr"><img src="http://farm8.staticflickr.com/7295/13917480704_933abe24e5_c.jpg" width="800" height="601" alt="Soldiers barracks"></a>
+
+<a href="http://www.flickr.com/photos/lucasthenomad/13917101303/in/set-72157644104270734" title="The view towards the new city by Lucas the nomad, on Flickr"><img src="http://farm8.staticflickr.com/7222/13917101303_643cec571e_c.jpg" width="800" height="450" alt="The view towards the new city"></a>
+
+
 headed up to the generlalife gardens, lots of fountains and water-staircase.
+
+<a href="http://www.flickr.com/photos/lucasthenomad/13893944911/in/set-72157644104270734" title="Waterjets by Lucas the nomad, on Flickr"><img src="http://farm8.staticflickr.com/7235/13893944911_34bb93d54d_c.jpg" width="800" height="601" alt="Waterjets"></a>
+
+<a href="http://www.flickr.com/photos/lucasthenomad/13917089765/in/set-72157644104270734" title="Garden fountain by Lucas the nomad, on Flickr"><img src="http://farm3.staticflickr.com/2932/13917089765_9f4cbb3592_c.jpg" width="800" height="601" alt="Garden fountain"></a>
+
+<a href="http://www.flickr.com/photos/lucasthenomad/13893979231/in/set-72157644104270734" title="The Water Stairway by Lucas the nomad, on Flickr"><img src="http://farm8.staticflickr.com/7133/13893979231_d013b17942_c.jpg" width="601" height="800" alt="The Water Stairway"></a>
 
 went and had tapas and beers with Rachael at a little place called restaurante
 boabdil, tiny little place with stainless steel benches and little bay-maries
@@ -87,28 +127,47 @@ met up with Em and Connor, then went to the fountain to meet up with Borja to go
 on the cave tour. Jack also made it back for the tour and had apparently been up
 to the Alhambra as well although we missed him
 
+<a href="http://www.flickr.com/photos/lucasthenomad/13917536504/in/set-72157644104270734" title="The illegal cave homes on the hill by Lucas the nomad, on Flickr"><img src="http://farm8.staticflickr.com/7366/13917536504_2e47accf22_c.jpg" width="800" height="601" alt="The illegal cave homes on the hill"></a>
+
 Cave tour took us up the hill to a few nice view points, then up to the hippy
 caves, only a few of who have power via solar panels. even these caves were a
 lot more established than I had been expecting
+
+<a href="http://www.flickr.com/photos/lucasthenomad/13917167763/in/set-72157644104270734" title="Now that looks like a cave home by Lucas the nomad, on Flickr"><img src="http://farm6.staticflickr.com/5163/13917167763_e40557b381_c.jpg" width="800" height="601" alt="Now that looks like a cave home"></a>
 
 Went right up to a nice wall to sit on and watch the sun set, then walked down
 the other side via the less established cave section. random couch overlooking
 the valley. got told about an old dude running a tea cafe out of a cave over the
 other side of the hills.
 
+<a href="http://www.flickr.com/photos/lucasthenomad/13894015226/in/set-72157644104270734" title="Jack, Rachel, Borja, Emily and Connor, watching the sunset by Lucas the nomad, on Flickr"><img src="http://farm8.staticflickr.com/7402/13894015226_a458e0d9de_c.jpg" width="800" height="601" alt="Jack, Rachel, Borja, Emily and Connor, watching the sunset"></a>
+
+<a href="http://www.flickr.com/photos/lucasthenomad/13893997112/in/set-72157644104270734" title="Epic sunset by Lucas the nomad, on Flickr"><img src="http://farm8.staticflickr.com/7396/13893997112_065be83db3_c.jpg" width="800" height="450" alt="Epic sunset"></a>
+
+
 tour ended and we went on a little tapas crawl, first place had awesome jamon,
 next place had delicious cheese and jamon
+
+<a href="http://www.flickr.com/photos/lucasthenomad/13917211833/in/set-72157644104270734" title="The Alhambra at night by Lucas the nomad, on Flickr"><img src="http://farm4.staticflickr.com/3706/13917211833_b89bf08c6d_c.jpg" width="800" height="450" alt="The Alhambra at night"></a>
 
 went to a flamenco show, only 6E. was worth seeing, but not something I’d seek
 out again. the dancing is impressive but the singing isn’t to my liking and the
 little cave/basement it was in was pretty dingy.
 
+<a href="http://www.flickr.com/photos/lucasthenomad/13894038541/in/set-72157644104270734" title="Flamenco show by Lucas the nomad, on Flickr"><img src="http://farm8.staticflickr.com/7389/13894038541_a0f16743cd_c.jpg" width="800" height="601" alt="Flamenco show"></a>
+
 next day
 
 went up to the Alhambra gardens with Em, Connor and Rachael
 
+<a href="http://www.flickr.com/photos/lucasthenomad/13894058432/in/set-72157644104270734" title="Lovely gardens by Lucas the nomad, on Flickr"><img src="http://farm8.staticflickr.com/7074/13894058432_536c27a832_c.jpg" width="800" height="601" alt="Lovely gardens"></a>
+
 Went and found ismael, the hippy dude who lived over the hill in a cave and ran
 a teteria. beautiful view and amazingly fancy tapas with our tea
+
+<a href="http://www.flickr.com/photos/lucasthenomad/13894089151/in/set-72157644104270734" title="Having tea at Ishmael's cave tetería by Lucas the nomad, on Flickr"><img src="http://farm8.staticflickr.com/7279/13894089151_0dac8cbf10_c.jpg" width="800" height="450" alt="Having tea at Ishmael's cave tetería"></a>
+
+<a href="http://www.flickr.com/photos/lucasthenomad/13894101056/in/set-72157644104270734" title="Fanciest tea + tapas ever! by Lucas the nomad, on Flickr"><img src="http://farm8.staticflickr.com/7273/13894101056_828b2b23a1_c.jpg" width="800" height="600" alt="Fanciest tea + tapas ever!"></a>
 
 hung out at the hostel for a bit, then went out for a drink with the girls,
 before em and Connor had to go get their lift to seville
@@ -120,8 +179,20 @@ Went exploring with rachael, started in the jewish district, then went over
 where there was supposed to be lots of graffiti, then went over around the
 cathedral
 
+<a href="http://www.flickr.com/photos/lucasthenomad/13894138352/in/set-72157644104270734" title="The Jewish district by Lucas the nomad, on Flickr"><img src="http://farm3.staticflickr.com/2909/13894138352_ae5d9cbba3_c.jpg" width="800" height="601" alt="The Jewish district"></a>
+
+<a href="http://www.flickr.com/photos/lucasthenomad/13894162272/in/set-72157644104270734" title="Cobblestone artwork by Lucas the nomad, on Flickr"><img src="http://farm8.staticflickr.com/7176/13894162272_0f3cbee403_c.jpg" width="800" height="601" alt="Cobblestone artwork"></a>
+
+<a href="http://www.flickr.com/photos/lucasthenomad/13894176706/in/set-72157644104270734" title="Street art Owl in Granada by Lucas the nomad, on Flickr"><img src="http://farm8.staticflickr.com/7052/13894176706_bbd2e3d2a6_c.jpg" width="800" height="601" alt="Street art Owl in Granada"></a>
+
+<a href="http://www.flickr.com/photos/lucasthenomad/13894193162/in/set-72157644104270734" title="Caracol by Lucas the nomad, on Flickr"><img src="http://farm3.staticflickr.com/2939/13894193162_206b181be6_c.jpg" width="800" height="601" alt="Caracol"></a>
+
+<a href="http://www.flickr.com/photos/lucasthenomad/13894207302/in/set-72157644104270734" title="Bicycle powered merry-go-round by Lucas the nomad, on Flickr"><img src="http://farm8.staticflickr.com/7409/13894207302_8c4727d226_c.jpg" width="800" height="601" alt="Bicycle powered merry-go-round"></a>
+
 Gypsy ladies trying to give us rosemary, shouting at us in spanish, rachel
 thinks they cursed her
+
+<a href="http://www.flickr.com/photos/lucasthenomad/13917758144/in/set-72157644104270734" title="Freaky street performer in front of a church by Lucas the nomad, on Flickr"><img src="http://farm4.staticflickr.com/3733/13917758144_ca2e006565_c.jpg" width="601" height="800" alt="Freaky street performer in front of a church"></a>
 
 went and found alahabra beer at a pretty nice tapas place for lunch. had bacon
 cheese rolls, prawns, chorizo, delicious spicy salty squid
@@ -129,9 +200,17 @@ cheese rolls, prawns, chorizo, delicious spicy salty squid
 went for a walk/hike along the other side of the river, nice view of the caves,
 found some more caves on that side of the river too.
 
+<a href="http://www.flickr.com/photos/lucasthenomad/13894696952/in/set-72157644104270734" title="Band jamming by Lucas the nomad, on Flickr"><img src="http://farm6.staticflickr.com/5030/13894696952_83c956412f_c.jpg" width="800" height="600" alt="Band jamming"></a>
+
+<a href="http://www.flickr.com/photos/lucasthenomad/13918252094/in/set-72157644104270734" title="Kings and knights patrolling by Lucas the nomad, on Flickr"><img src="http://farm8.staticflickr.com/7073/13918252094_7952020765_c.jpg" width="800" height="600" alt="Kings and knights patrolling"></a>
+
+<a href="http://www.flickr.com/photos/lucasthenomad/13894721682/in/set-72157644104270734" title="Looking back towards Granada and the hill of cave homes by Lucas the nomad, on Flickr"><img src="http://farm3.staticflickr.com/2935/13894721682_474a0e52c5_c.jpg" width="800" height="450" alt="Looking back towards Granada and the hill of cave homes"></a>
+
 went exploring up the hill again in search of snail restaurant, but sadly it was
 closed. energy levels plummeting, came down the hill and parted ways for a few
 hours to rest and sort out my plans for cordoba
+
+<a href="http://www.flickr.com/photos/lucasthenomad/13894756511/in/set-72157644104270734" title="Tapas menu by Lucas the nomad, on Flickr"><img src="http://farm4.staticflickr.com/3694/13894756511_c3bbfc3231_c.jpg" width="600" height="800" alt="Tapas menu"></a>
 
 Met up with Rachael and went to Babel tapas bar, world fusion food. very tasty
 but the service was very poor. two drinks and tapas took probably and hour and a
@@ -142,6 +221,8 @@ cheerful bartender, beer had a funny taste but was cheap enough to make up for
 it. ordered some snails, a huge bowl full (like 40 snails or something) they
 were kind of odd textured, but not particularly great. I prefer the french style
 ones where you get 6 and they just taste like butter and garlic.
+
+<a href="http://www.flickr.com/photos/lucasthenomad/13894758262/in/set-72157644104270734" title="Giant bowl of snails by Lucas the nomad, on Flickr"><img src="http://farm4.staticflickr.com/3732/13894758262_17d7c170de_c.jpg" width="600" height="800" alt="Giant bowl of snails"></a>
 
 went to los diamontes, seafood tapas place. pretty disappointing. very noisy, no
 music and the prawns they served us were still with shells
